<resources>
    <string name="app_name">Next Lesson Widget</string>

    <string name="resTitle">Next lesson widget crash</string>
    <string name="resText">Would you like to send a bug report to the developer?</string>
    <string name="lucas_bonvin"><u>Lucas Bonvin</u></string>
    <string name="lucblender"><u>lucblender</u></string>
    <string name="lesson_format_csv_error">Lesson Format or csv file is not correct</string>
    <string name="select_end_time">Select end lesson time</string>
    <string name="select_start_time">Select start lesson time</string>
    <string name="modify_button">Modify</string>
    <string name="modify_title">Modify Lesson</string>
    <string name="help_text_1">Widget user interface:</string>
    <string name="help_text_2">• Widget, next lesson</string>
    <string name="help_text_3">Planner user interface:</string>
    <string name="help_text_4">• Swipe right, full planner</string>
    <string name="help_text_5">• Planner editable</string>
    <string name="help_text_6">• Plus button to add</string>
    <string name="help_text_7">• Long click to:</string>
    <string name="help_text_8">• Delete lesson</string>
    <string name="help_text_9">• Modify Lesson</string>
    <string name="help_text_10">• Duplicate Lesson</string>
    <string name="help_title">Help</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_not_granted">Permission to access your media not granted!</string>
    <string name="delete_warning_message">Are you sure you want to delete \"</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning">Warning</string>
    <string name="file_error">File Error</string>
    <string name="click_to">click to</string>
    <string name="change_file">change file</string>
    <string name="about">About</string>
    <string name="made_by">Made by</string>
    <string name="code_github">Code available on github:</string>
    <string name="free_use_modify">Free to use and modify</string>
    <string name="add_lesson">Add a lesson</string>
    <string name="lesson_name">Lesson name</string>
    <string name="day">Day</string>
    <string name="start_hour">Start hour</string>
    <string name="end_hour">End hour</string>
    <string name="city">Location</string>
    <string name="room">Room</string>
    <string name="add">Add</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="next_lesson">Next Lesson:</string>
    <string name="choose_csv">Choose your planning csv file</string>
    <string name="open_file">Open Selected File</string>
    <string name="help">Help</string>
    <string name="parameters">Parameters</string>
    <string name="change_language">Change Language</string>

    <string-array name="list_lang_entries">
        <item>English</item>
        <item>Français</item>
    </string-array>

    <string-array name="list_lang_values">
        <item>en</item>
        <item>fr</item>
    </string-array>

    <string-array name="list_theme_entries">
        <item>Dark</item>
        <item>Light</item>
        <item>BlueNeon</item>
        <!--item>Test</item-->
    </string-array>

    <string-array name="list_theme_values">
        <item>dark</item>
        <item>light</item>
        <item>blueneon</item>
        <!--item>test</item-->
    </string-array>

    <string name="send_file">Send planning</string>
    <string name="duplicate_lesson">Duplicate Lesson</string>
    <string name="duplicate">Duplicate</string>
    <string name="modify">Modify</string>
    <string name="open_csv">Open the csv planning file with dedicated app</string>
    <string name="send_planning">Send your planning file to someone else</string>
    <string name="choose_theme">Choose theme</string>
    <string name="warning_no_widget"><![CDATA[It seems that you have no widget on your main screen, go on your HomeScreen and choose: <br> <i>\"Next Lesson Widget\"</i>]]></string>
    <string name="delete_all_warning"><![CDATA[Are you sure you  want to delete <u><b>ALL</b></u> your current planning?]]></string>
    <string name="cannot_delete_planning">You cannot delete your last selected planning</string>
    <string name="warning_delete_file_1">Are you sure you want to delete \"</string>
    <string name="warning_delete_file_2">\" from your file collection?</string>
    <string name="add_planning_file">Add a new planning path</string>
    <string name="new_planning_created">Your new planning file is created, you can now add new lessons.</string>
    <string name="error_create_file">Couldn\'t create new file:</string>
    <string name="invalid_file_name">Please enter a valid file name.</string>
    <string name="file_name">File Name:</string>
    <string name="create">Create</string>
    <string name="create_new_file">Create a new blank planning file</string>
    <string name="delete_all">Delete all lessons</string>
    <string name="create_new_blank">Create a new blank planning</string>
    <string name="choose_planning_help">Choose your planning Help</string>
    <string name="choose_planning_help_text">You can choose your planning from your planning file collection simply by selecting it or adding a new one. If you want to delete a planning file from your collection, simply long click on it.</string>
    <string name="error_create_folder">Couldn\'t create new folder:</string>
    <string name="delete_all_error">Couldn\'t delete all your lessons, error with file.</string>
    <string name="widget_customization">Widget Customization</string>
    <string name="preview">Preview</string>
    <string name="choose_color">Choose Color</string>
    <string name="alpha">Background Alpha</string>
    <string name="next">Next</string>
    <string name="planning_file">Planning File</string>
    <string name="ok">OK</string>
    <string name="help_widget_param_text_1">You can modify the look and feel of every widget you want to add. On the preview screen you can see in real time your modification.</string>
    <string name="help_widget_param_text_2">You can modify:</string>
    <string name="help_widget_param_text_3">• the background color</string>
    <string name="help_widget_param_text_4">• the background alpha</string>
    <string name="help_widget_param_text_5">• the label : Next…</string>
    <string name="help_widget_param_text_6">• the planning file</string>
    <string name="text_color">Text Color</string>

</resources>
