<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:title="@string/choose_csv"
        android:summary="%s"
        android:key="filePicker"
        />
    <Preference
        android:title="@string/open_file"
        android:summary=""
        android:key="fileOpen"
        />
    <ListPreference
        android:key="param_language"
        android:title="@string/change_language"
        android:defaultValue="1"
        android:entries="@array/list_lang_entries"
        android:entryValues="@array/list_lang_values"
        android:summary="%s"
        />
    <Preference
        android:title="@string/help"
        android:summary=""
        android:key="help"
        />
    <Preference
        android:title="@string/about"
        android:summary=""
        android:key="about"
        />
    <Preference
        android:layout="@layout/custom_preference"/>
</PreferenceScreen>