<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:background="?colorPrimary">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_launcher_legacy_only"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textSize="20dp"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_widget_param_text_1"
        android:textColor="?android:textColorSecondary"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_widget_param_text_2"
        android:paddingStart="0dp"
        android:paddingTop="3dp"
        android:textColor="?android:textColorSecondary"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_widget_param_text_3"
        android:paddingStart="25dp"
        android:paddingTop="3dp"
        android:textColor="?android:textColorSecondary"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_widget_param_text_4"
        android:paddingStart="25dp"
        android:paddingTop="3dp"
        android:textColor="?android:textColorSecondary"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_widget_param_text_5"
        android:paddingStart="25dp"
        android:paddingTop="3dp"
        android:textColor="?android:textColorSecondary"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_widget_param_text_6"
        android:paddingStart="25dp"
        android:paddingTop="3dp"
        android:textColor="?android:textColorSecondary"/>

</LinearLayout>
