<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:weightSum="7"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:background="?colorPrimary">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_legacy_only"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_file"
            android:textSize="20dp"
            android:layout_weight="1"
            android:id="@+id/addLessonTitle"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_name"
            android:textColor="?android:textColorSecondary"
            android:textSize="15sp"
            android:paddingRight="20dp"/>
        <EditText
            android:id="@+id/editTextNewFileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?colorPrimaryDark"
            android:singleLine="true"
            android:textColor="?android:textColorSecondary"
            android:textSize="15sp"/>

    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_weight="1"
            android:text="@string/create"
            android:id="@+id/buttonNewFileCreate"
            android:backgroundTint="?colorAccent"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:id="@+id/buttonNewFileCancel"
            android:backgroundTint="?colorAccent"/>
    </LinearLayout>
</LinearLayout>

