<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:text="@string/widget_customization"
                android:textSize="20dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:paddingTop="5dp"
                android:paddingBottom="15dp">

                <ImageView
                    android:id="@+id/imageBackground"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/layout_bottom_right_corner"
                    android:backgroundTint="?colorPrimary"
                    android:paddingStart="2dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="2dp"
                    android:text="@string/preview"
                    android:textSize="20dp" />

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true">

                    <ImageView
                        android:id="@+id/widgetExample"
                        android:layout_width="72dp"
                        android:layout_height="85dp"
                        android:src="@drawable/layout_bg"
                        android:tint="#000000" />

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="72dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/previewNextLesson"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/next_lesson"
                            android:textColor="@color/colorTextWidget"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/previewDay"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Monday"
                            android:textColor="@color/colorTextWidget"
                            android:textSize="8dp" />

                        <TextView
                            android:id="@+id/previewHour"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="8:00 - 9:00"
                            android:textColor="@color/colorTextWidget"
                            android:textSize="8dp" />

                        <TextView
                            android:id="@+id/previewLessonName"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:duplicateParentState="true"
                            android:ellipsize="marquee"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:gravity="center"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:scrollHorizontally="true"
                            android:singleLine="true"
                            android:text="Lesson Name"
                            android:textColor="@color/colorTextWidget"
                            android:textSize="12dp">

                            <requestFocus
                                android:duplicateParentState="true"
                                android:focusable="true"
                                android:focusableInTouchMode="true" />
                        </TextView>

                        <TextView
                            android:id="@+id/previewLocation"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="location"
                            android:textColor="@color/colorTextWidget"
                            android:textSize="10dp" />

                        <TextView
                            android:id="@+id/previewRoom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="Room"
                            android:textColor="@color/colorTextWidget"
                            android:textSize="10dp" />
                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/colorTest"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?colorAccent"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:text="@string/choose_color"
                        android:textSize="15dp"
                        android:layout_weight="1"/>

                    <ImageView
                        android:id="@+id/colorCircle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:src="@mipmap/ic_circle" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/text_color"
                        android:textSize="15dp"
                        android:layout_weight="1"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/balckWhiteSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="3dp"
                        android:shadowRadius="10"
                        android:theme="@style/SwitchStyleShared"
                        android:thumb="@drawable/switch_thumb"
                        app:switchMinWidth="60dp"
                        android:layout_weight="1"
                        />
                </LinearLayout>

            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:stretchColumns="1">
                <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingTop="10dp"
                            android:paddingRight="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/alpha"
                            android:textSize="15dp" />

                        <SeekBar
                            android:id="@+id/testSeek"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_column="0"
                        android:layout_gravity="center_vertical"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/next"
                        android:textSize="15dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="1"
                        android:layout_gravity="center_vertical"
                        android:background="?colorAccent">

                        <Spinner
                            android:id="@+id/spinnerNextText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true" />
                    </RelativeLayout>
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_row="1"
                        android:layout_column="0"
                        android:layout_gravity="center_vertical"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/planning_file"
                        android:textSize="15dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="1"
                        android:layout_gravity="center_vertical"
                        android:background="?colorAccent">

                        <Spinner
                            android:id="@+id/spinnerParamFile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </RelativeLayout>
                </TableRow>


            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/widgetParamCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="?colorAccent"
                    android:text="@string/cancel"
                    android:textSize="15dp" />

                <Button
                    android:id="@+id/widgetParamOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="?colorAccent"
                    android:text="@string/ok"
                    android:textSize="15dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>